Chore: Ledger views improvement & journal type removal
